# CppADCodeGenEigenPy

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conftest.py  pyproject.toml  setup.py
example/: .gitignore  Makefile
example/include/example/: Defs.h
example/src/: compile_model.cpp  evaluate_model.cpp
examples/dynamics/: Makefile  README.md  requirements.txt
examples/dynamics/include/: dynamics_model.h  rigid_body.h  rollout_model.h  types.h
examples/dynamics/scripts/: test_dynamics_model.py  test_rollout_model.py  util.py
examples/dynamics/src/: compile_model.cpp
examples/nonparameterized/: Makefile
examples/nonparameterized/include/example/: Defs.h  MatrixAddon.h
examples/nonparameterized/src/: compile_model.cpp  evaluate_model.cpp
examples/parameterized/: Makefile
examples/parameterized/include/example/: Defs.h
examples/parameterized/src/: compile_model.cpp  evaluate_model.cpp
examples/pinocchio/: .gitignore  Makefile  README.md
examples/pinocchio/include/: inverse_dynamics_model.h
examples/pinocchio/scripts/: test_inverse_dynamics_model.py
examples/pinocchio/src/: compile_model.cpp
examples/simple/: Makefile  README.md  load_model.py  model.cpp
include/CppADCodeGenEigenPy/: ADFunction.h  ADMacro.h  ADModel.h  CompiledModel.h  Model.h  Util.h
include/CppADCodeGenEigenPy/impl/: ADFunction.tpp  ADModel.tpp  CompiledModel.tpp  Model.tpp
src/: bindings.cpp  compile.cpp  evaluate.cpp
test/: model_test.cpp
tests/: basic_model_test.cpp  low_order_model_test.cpp  math_functions_model_test.cpp  parameterized_model_test.cpp
tests/cpp/: math_functions_model_test.cpp
tests/cpp_tests/: BasicModelTest.cpp  LowOrderModelTest.cpp  MathFunctionsModelTest.cpp  MiscTest.cpp  ParameterizedModelTest.cpp  basic_model_test.cpp
tests/helpers/: compile_models.cpp
tests/include/testing/: Defs.h
tests/include/testing/models/: BasicTestModel.h  MathFunctionsTestModel.h  ParameterizedTestModel.h  low_order_model_test.cpp
tests/models/: basic_test_model.h
tests/python_tests/: basic_model_test.py  compile_models.cpp  low_order_model_test.py  math_functions_model_test.py  parameterized_model_test.py  test_model.py
