[tool.poetry]
name = "CppADCodeGenEigenPy"
version = "0.1.0"
description = ""
authors = ["Adam Heins <mail@adamheins.com>"]
license = "MIT"
packages = [
    { include = "CppADCodeGenEigenPy.*", from = "build" },
]

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.18"

[tool.poetry.dev-dependencies]
pytest = ">=4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
